# Estrutura-do-Projeto

./: .YAML  .gitignore  About.html  Ambiente Virtual  Ambiente- Virtual.sh  Base.html  CODE_OF_CONDUCT.md  LICENSE  README.md  Report-issues.yaml  SECURITY.md  Script.js  Style.css  ambiente-virtual.sh  codigo.yaml  configurar-ambiente.sh  index.html  package-lock.json  package.json  plano  pyproject.toml  requirements.txt  run.sh  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  report-issues.yaml
Organização em python/: Aplicativo_init_.py  app-route.py  app-templates-index.html  app-templates-sobre.html  texto simples
Python/: _init_.py
Static/: style.css
Static/Ts/: app.ts  clock.ts
Static/js/: app.js  clock.js
Static/js/Static/Ts/: app.js
Tests/: Config.py  Flaskenv  Requirements.txt  Run.sh  Visão geral da Arquitetura.md  app_init_.py  jsx  test_route.py
Tests/src/: App.jsx  app.jsx  app_init_.py  componemtes
Tests/src/público/: index.html
dependabot.yml/: dependabot.yml
estrutura_do_projeto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/: $ flask run  Frasco 3.1.0  Run.py  __init__.py  app.py  config.py  flask  routes.py
python/services/: __init__.py  enterprise_automation.py  project_overview.py  project_structure.py
scripts/: deploy.sh  lint.sh  setup.sh  test.sh
templates/: Index.html  about.html  base.html  index.html
templates/errors/: 404.html  500.html  default.html
